# weather__bot

./: bot_start  pyproject.toml  readme.md
bot_core/: .env  bot_buttons.py  coordinates.py  message_type.py  service.py  telegram_bot.py  weather_api.py
