[tool.poetry]
name = "tg-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "tg_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
aiogram = "^2.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
